# autonomous-vehicle-mcu

./: .gitignore  CMakeLists.txt  Makefile  README.md  firstcommit
Arduino_Codes/all_modules/: all_modules.ino
Linux Codes/src/Communication/: Communication.h
Linux Codes/src/Communication/Test/: communication_test.cpp
Linux Codes/src/Logger/: ConsoleLog.cpp  Syslog.h
Linux_Codes/: CMakeLists.txt
Linux_Codes/Scripts/: lidar_kill.sh  lidar_launch.sh  lidar_req.py  restart_all_services.sh  run_MCU_communication.sh
Linux_Codes/Services/: HeartbeatMechanism_car.service  HeartbeatMechanism_station.service  MCU_Communication.service  communication_test.service  create_car_services.sh  create_services.sh  lane_detection.service  lidar_communication.service  lidar_kill.sh  lidar_launch.sh  light_sign_detection.service  linux_control.service  reqrep_client.service  reqrep_server.service  steering_process.service  wifi_client.service  wifi_server.service  zmq_client.service  zmq_server.service
Linux_Codes/make/: global_definition.cmake  print_config.cmake
Linux_Codes/src/CommonLib/: CMakeLists.txt  CommonLib.cpp  CommonLib.h  CommonLib.py  common.cpp  common.h
Linux_Codes/src/Communication/: CMakeLists.txt  Server.cpp
Linux_Codes/src/Communication/Test/: CMakeLists.txt  communication_test.cpp
Linux_Codes/src/Deprecated/Communication/: AbstractCommunication.cpp  Client.cpp
Linux_Codes/src/Deprecated/Logger/: CMakeLists.txt
Linux_Codes/src/HeartbeatMechanism/: CMakeLists.txt  comBase.cpp  comBase.h  heartbeatsMechanisim.cpp  heartbeatsMechanisim.h  heartbeatsMechanism.h  heartbeatsMechanism_car.cpp  heartbeatsMechanism_station.cpp  main_car.cpp  main_station.cpp  publisher.cpp  publisher.h  subscriber.cpp  subscriber.h
Linux_Codes/src/HeartbeatMechanism/Test/: CMakeLists.txt  main.cpp  main_arac.cpp  main_car.cpp  main_server.cpp  main_station.cpp
Linux_Codes/src/Logger/: CMakeLists.txt
Linux_Codes/src/Logger/Test/: CMakeLists.txt
Linux_Codes/src/Message/: CMakeLists.txt
Linux_Codes/src/Message/Test/: CMakeLists.txt
Linux_Codes/src/ProtoFiles/: CMakeLists.txt  common.proto  lidar_comm.proto  process.proto  station_car.proto
Linux_Codes/src/Python/: compile_proto_for_python.sh
Linux_Codes/src/Python/CommonLib/: CommonLib.py
Linux_Codes/src/Python/LidarCommunication/: LidarComm_client.py
Linux_Codes/src/Python/ProtoOut/: common_pb2.py  station_car_pb2.py
Linux_Codes/src/Python/ZmqCommunication/: combase.py  pubsub.py  seqreqrep.py
Linux_Codes/src/WifiCommunication/: CMakeLists.txt  main_client.cpp  main_server.cpp
Linux_Codes/src/WifiCommunication/WIFI_CLI/: CMakeLists.txt  WIFI_CommandLineInterface.cpp  WIFI_CommandLineInterface.h
Linux_Codes/src/ZmqCommunication/: CMakeLists.txt  client.cpp  client.h  comBase.cpp  comBase.h  publisher.cpp  publisher.h  server.cpp  server.h  subscriber.cpp  subscriber.h
Linux_Codes/src/ZmqCommunication/Test/: CMakeLists.txt  main_client.cpp  main_server.cpp
Linux_Codes/src/mcu_communication/: CMakeLists.txt  CommandLineInterface.cpp  CommandLineInterface.h  CommunicationMechanism.cpp  CommunicationMechanism.h  UARTCommunication.cpp  UARTCommunication.h  UARTMessageBuilder.cpp  UARTMessageBuilder.h  cli.cpp  cli.h  find_usb.sh  mcu_communication_service.cpp
Linux_Codes/src/mcu_communication/CLI/: CMakeLists.txt  CommandLineInterface.cpp  CommandLineInterface.h
Linux_Codes/src/reqrep/: CMakeLists.txt  main_client.cpp  main_server.cpp
STM32 Codes/autonomousVehicle_GTU/: .cproject  .mxproject  STM32F407VGTX_FLASH.ld
STM32 Codes/autonomousVehicle_GTU/Debug/: objects.list  sources.mk
STM32 Codes/autonomousVehicle_GTU/Debug/Src/: subdir.mk
STM32 Codes/autonomousVehicle_GTU/Inc/: autonomousVehicle_conf.h
STM32 Codes/autonomousVehicle_GTU/Release/: makefile  objects.list  sources.mk
STM32 Codes/autonomousVehicle_GTU/Release/Startup/: subdir.mk
STM32 Codes/autonomousVehicle_GTU/Src/: main.c  stm32f4xx_it.c
STM32 Codes/autonomousVehicle_GTU/Src/Controllers/: BrakeController.h  ThrottleController.cpp
STM32_Codes/Controllers_must_be_c/: BrakeController.cpp  autonomousVehicle_conf.h
STM32_Codes/autonomousVehicle_GTU/: .cproject  .mxproject  .project  autonomousVehicle_GTU.elf.launch  autonomousVehicle_GTU.ioc
STM32_Codes/autonomousVehicle_GTU/Inc/: FreeRTOSConfig.h  autonomousVehicle_conf.h  dwt_delay.h  helpers.h  main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
STM32_Codes/autonomousVehicle_GTU/Src/: dwt_delay.c  helpers.c  main.c  main.cpp  stm32f4xx_hal_msp.c  stm32f4xx_it.c  syscalls.c
STM32_Codes/autonomousVehicle_GTU/Src/Communications/: Communication_Mechanism.c  Communication_Mechanism.h  UART_Communication.c  UART_Communication.h  UART_Message.c  UART_Message.h
STM32_Codes/autonomousVehicle_GTU/Src/Controllers/: BrakeController.c  BrakeController.h  MainController.c  MainController.h  SteerController.c  SteerController.cpp  SteerController.h  ThrottleController.c  ThrottleController.h
doc/: Makefile  README.md  UARTCom.txt  make.bat
doc/source/: HowToInstall.rst  conf.py  index.rst
make/: global_definition.cmake
src/Arduino Codes/BrakeSystem/: BrakeSystem.ino
src/Arduino Codes/all_modules/: all_modules.ino
src/STM32/autonomousVehicle_GTU/: .cproject  .project  STM32F407VGTX_RAM.ld  autonomousVehicle_GTU.ioc
src/modules/Communication/: AbstractCommunication.cpp  AbstractCommunication.h  CMakeLists.txt  Client.cpp  Client.h  Communication.h  Server.cpp  Server.h  driver.cpp
src/modules/Communication/Test/: CMakeLists.txt  driver.cpp
src/modules/Logger/: CMakeLists.txt  ConsoleLog.h  Logger.h  README.md  Syslog.cpp
src/modules/Logger/Test/: logger_test.cpp
src/modules/Message/: CMakeLists.txt  messagebuilder.cpp  messagebuilder.h
src/modules/Message Builder/: main.cpp  messagebuild.cpp  messagebuild.h  testers.cpp
src/modules/Message/Test/: CMakeLists.txt  messagebuilder_test.cpp
src/modules/communication/: Communication.h  Makefile
utils/: AutonomousVehicle_Eclipse_Formatter.xml  AutonomousVehicle_Eclipse_Template.xml
(+30 files in other folders)
