set(TARGET_NAME "Logger")
PROJECT(${TARGET_NAME} CXX C ASM)

include_directories(${CMAKE_BINARY_DIR}/include ${CMAKE_CURRENT_BINARY_DIR})

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PRJ_OUTPUT_PATH}/${CMAKE_BINARY_DIR}/bin)

SET(SOURCEFILES
        ConsoleLog.cpp
        Syslog.cpp)

SET(INCLUDEDIRS
        ${CMAKE_CURRENT_LIST_DIR}
        )
ADD_LIBRARY(${TARGET_NAME} STATIC ${SOURCEFILES})
#TARGET_LINK_LIBRARIES(${TARGET_NAME} "")
add_subdirectory(Test)